<resources>
    <string name="app_name">Security Switch</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_enable_high_security">Enable High Security</string>
    <string name="pref_description_enable_high_security">Set lockscreen to user-defined
        high security setting. If disabled, set lockscreen to user-defined low security
        setting.
    </string>

    <string name="pref_title_low_security">Low Security</string>
    <!-- <string name="pref_default_low_security">None</string> -->
    <string name="pref_title_high_security">High Security</string>
    <!-- <string name="pref_default_high_security">Pin</string> -->

    <string-array name="pref_list_security_titles">
        <item>None</item>
        <item>Swipe</item>
        <item>Pattern</item>
        <item>Pin</item>
        <item>Password</item>
    </string-array>
    <string-array name="pref_list_security_values">
        <item>4</item>
        <item>3</item>
        <item>2</item>
        <item>1</item>
        <item>0</item>
    </string-array>

    <string name="pref_title_pattern">Pattern</string>
    <string name="pref_title_pin">Pin</string>
    <string name="pref_title_password">Password</string>

    <!--
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array> -->

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
